kubernetes/apps/extras/default/synophoto/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synophoto
  namespace: linebot
spec:
  hostnames: ["synophoto.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: synophoto
          namespace: linebot
          port: 5001
      matches:
        - path:
            type: PathPrefix
            value: /
